--- a/BikeShop/contact.html
+++ b/BikeShop/contact.html
@@ -11,10 +11,10 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="shop.html">Shop</a></li>
-				<li><a href="clubEvents.html">Club Events</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><button><a href="index.html">Home</a></button></li>
+				<li><button><a href="shop.html">Shop</a></button></li>
+				<li><button><a href="clubEvents.html">Club Events</a></button></li>
+				<li><button><a href="contact.html">Contact</a></button></li>
 			</ul>
 		</nav>
 		<h1>
@@ -95,4 +95,5 @@
 </body>
 
 <script src="js/content.js"></script>
+<script src="js/events.js"></script>
 </html>
