--- a/BikeShop/index.html
+++ b/BikeShop/index.html
@@ -11,10 +11,10 @@
 	<header>
 		<nav>
 			<ul>
-				<li><a href="index.html">Home</a></li>
-				<li><a href="shop.html">Shop</a></li>
-				<li><a href="clubEvents.html">Club Events</a></li>
-				<li><a href="contact.html">Contact</a></li>
+				<li><button><a href="index.html">Home</a></button></li>
+				<li><button><a href="shop.html">Shop</a></button></li>
+				<li><button><a href="clubEvents.html">Club Events</a></button></li>
+				<li><button><a href="contact.html">Contact</a></button></li>
 			</ul>
 		</nav>
 		<h1>
@@ -32,7 +32,7 @@
 		<h2>Shop <br> Featured Products</h2>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
-			<img src="images/ratings.png" alt="rating">
+			<img src="images/4 star.png" alt="rating">
 			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Lorem ipsum dolor</p>
@@ -40,7 +40,7 @@
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
-			<img src="images/ratings.png" alt="rating">
+			<img src="images/4 star.png" alt="rating">
 			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Lorem ipsum dolor</p>
@@ -48,7 +48,7 @@
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
-			<img src="images/ratings.png" alt="rating">
+			<img src="images/4 star.png" alt="rating">
 			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Lorem ipsum dolor</p>
@@ -56,7 +56,7 @@
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
-			<img src="images/ratings.png" alt="rating">
+			<img src="images/4 star.png" alt="rating">
 			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Lorem ipsum dolor</p>
@@ -64,7 +64,7 @@
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
-			<img src="images/ratings.png" alt="rating">
+			<img src="images/4 star.png" alt="rating">
 			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Lorem ipsum dolor</p>
@@ -72,7 +72,7 @@
 		</article>
 		<article>
 			<img src="images/seat.jpg" alt="bike seat">
-			<img src="images/ratings.png" alt="rating">
+			<img src="images/4 star.png" alt="rating">
 			<h4>Lorem ipsum dolor</h4>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt </p>
 			<p>Lorem ipsum dolor</p>
@@ -154,4 +154,5 @@
 </body>
 
 <script src="js/content.js"></script>	
+<script src="js/events.js"></script>
 </html>
